--- a/css/style-physical.css
+++ b/css/style-physical.css
@@ -43,6 +43,7 @@ body
 {
     color: var(--gray30);
     font-family: var(--fontFamily);
+    margin: 0;
 }
 
 a
@@ -75,21 +76,53 @@ nav details summary
 h1
 {
     font-size: 60px; /*3.75em*/
+    margin-top: 64px;
+    margin-bottom: 16px;
+}
+
+hr
+{
+    margin: 64px 0;
 }
 
 h2
 {
     font-size: 32px; /*2em*/
+    margin: 64px 0 40px;
+    font-weight: normal;
 }
 
 .section-content
 {
     counter-reset: titleList;
+    margin-top: 164px;
+}
+
+.section-content:first-of-type
+{
+    margin: 0;
+}
+
+.section-content + hr
+{
+    display: none;
+}
+
+h3
+{
+    font-size: 24px; /*1.5em*/
+    margin-top: 16px;
+    margin-bottom: 24px;
+    font-weight: normal;
+}
+
+.section-content img
+{
+    margin-top: 40px;
 }
 
 .section-content h3
 {
-    font-size: 24px; /*1.5em*/
     counter-increment: titleList;
 }
 
@@ -105,6 +138,21 @@ h2
     height: 4px;
     background: var(--gray30);
     display: inline-block;
+}
+
+.section-content ol li
+{
+    line-height: 24px;
+}
+
+.section-content ul li
+{
+    margin-bottom: 16px;
+}
+
+blockquote
+{
+    margin: 32px 0;
 }
 
 pre
