--- a/css/style_logical.css
+++ b/css/style_logical.css
@@ -38,32 +38,16 @@ hr
     border-color: rgba(97, 97, 97, 0.2);
 }
 
-.header
-{
-    position: sticky;
-    inset-block-start: -45px;
-}
-
 .header-content
 {
-    position: relative;
-    inset-block-start: 65px;
+    padding-inline: 20px;
 }
 
 header
 {
     font-size: 14px;
     color: var(--white30);
-    position: absolute;
-    inset-block-start: 0;
-    inset-inline-start: -208px;
-    width: 188px;
-
-
-    /* inset-block-start:; TOP
-    inset-block-end:; BOTTOM
-    inset-inline-start:; LEFT
-    inset-inline-end:; RIGHT */
+    margin-block-start: 20px;
 }
 
 header li 
@@ -100,8 +84,8 @@ nav details summary
 
 h1
 {
-    font-size: 60px; /*3.75em*/
-    margin-block-start: 64px;
+    font-size: 40px; /*3.75em*/
+    margin-block-start: 20px;
     margin-block-end: 16px;
 }
 
@@ -161,7 +145,7 @@ pre
     background-color: var(--white10);
     padding-inline: 40px;
     padding-block: 40px;
-    /* overflow: auto; */
+    overflow: auto;
     border-radius: 8px;
     border: 10px solid #5551ff;
     box-shadow: -10px 10px 0 0 #abaaf6;
@@ -171,7 +155,7 @@ pre
 .hero
 {
     background-image: linear-gradient(96.07deg, #314755 30.63%, #26A0DA 102.18%);
-    height: 350px;
+    block-size: 100px;
 }
 
 .wrapper
@@ -236,4 +220,41 @@ pre
 .form input::-webkit-input-placeholder
 {
     color: var(--white20);
+}
+
+@media screen and (min-width: 1366px) {
+    .header {
+        position: sticky;
+        inset-block-start: -45px;
+    }
+
+    .header-content {
+        position: relative;
+        inset-block-start: 65px;
+        padding-inline: 0;
+    }
+
+    header {
+        font-size: 14px;
+        color: var(--white30);
+        position: absolute;
+        inset-block-start: 0;
+        inset-inline-start: -208px;
+        width: 188px;
+
+
+        /* inset-block-start:; TOP
+        inset-block-end:; BOTTOM
+        inset-inline-start:; LEFT
+        inset-inline-end:; RIGHT */
+    }
+
+    h1 {
+        font-size: 60px;
+        margin-block-start: 64px;
+    }
+
+    .hero {
+        block-size: 350px;
+    }
 }
