--- a/css/index.css
+++ b/css/index.css
@@ -200,6 +200,8 @@ pre
     padding: 40px;
     font-family: var(--fontFamily);
     line-height: 24px;
+    overflow: auto;
+    font-size: 16px;
 }
 
 .hero
