--- a/css/nemiume.css
+++ b/css/nemiume.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root
 {
@@ -11,7 +11,7 @@
     --negro: #000;
 
     --footer: #EEBBC3;
-    --fontFamily: 'Nunito', sans-serif;
+    --fontFamily: 'Montserrat', sans-serif;
 }
 
 html
@@ -169,7 +169,7 @@ blockquote
     background-color: var(--cita);
     border-radius: 8px;
     line-height: 32px;
-    font-size: 24px;
+    font-size: 16px;
     padding-inline: 24px;
     padding-block: 24px;
 }
@@ -339,6 +339,10 @@ footer
 
     .hero {
         block-size: 350px;
+    }
+
+    blockquote {
+        font-size: 24px;
     }
 
     .footer p {
